fix: mobile button alignment

--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -49,9 +49,8 @@ form input.submitBtn {
     color: white;
     border-radius: 1rem;
     padding: 0.75rem 1.5rem;
-    margin: auto;
-    max-width: 25rem;
     width: 100%;
+    margin: 1rem 0;
     font-size: 1.2rem;
 }
 
